--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/antonio": "^5.0.18",
+    "@midudev/tailwind-animations": "^0.0.7",
     "astro": "^4.2.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
